<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:background="@android:color/white"
    tools:context=".PantallaLogin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/nombreApp"
        android:textAlignment="center"
        android:textColor="#fd9f9d"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/foto_de_chava_con_pesa"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/chavaconpesa"
        tools:srcCompat="@drawable/chavaconpesa"></ImageView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/lblCorreo"
            android:textAlignment="gravity"
            android:textColor="@android:color/black">

        </TextView>

        <EditText
            android:id="@+id/correoEdit"
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:autofillHints="esctibe tu Correo Aqui"
            android:background="#e3beb8"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:layout_marginLeft="6dp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/lblContrasena"
            android:textAlignment="gravity"
            android:textColor="@android:color/black">

        </TextView>

        <EditText
            android:id="@+id/claveEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:hint="especifique su contraseña"
            android:autofillHints="Introduce tu Contraseña"
            android:background="#e3beb8"
            android:inputType="textWebPassword"
            android:padding="5dp"
            android:layout_marginLeft="6dp">


        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="216dp"
        android:layout_height="59dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="32dp"
        android:background="#fd9f9d"
        android:onClick="iniciarSesion"
        android:text="Iniciar Session"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
